Pack OCTGN outputs into archive and move to destination folder

--- a/setGenerator.ipynb
+++ b/setGenerator.ipynb
@@ -19,11 +19,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "timestamp = time.time()\n",
     "conf = lotr.read_conf()\n",
+    "sets = lotr.get_sets(conf)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "timestamp = time.time()\n",
     "lotr.clear_project_folders()\n",
     "lotr.download_sheet(conf)\n",
-    "sets = lotr.get_sets(conf)\n",
     "\n",
     "changes = False\n",
     "for set_data in sets:\n",
@@ -97,6 +105,9 @@
     "            lotr.generate_jpg300_bleeddtc(conf, set_id, set_name, lang, skip_ids)\n",
     "            lotr.generate_dtc(conf, set_id, set_name, lang)\n",
     "\n",
+    "if 'octgn' in conf['outputs']:\n",
+    "    lotr.upload_octgn_archive(conf)\n",
+    "\n",
     "logging.info('Done (%ss)', round(time.time() - timestamp, 3))"
    ]
   },
@@ -110,7 +121,9 @@
     "- `Output/DB/<set name>.<language>/`: 300 dpi JPG images for general purposes.\n",
     "- `Output/PDF/<set name>.<language>/`: PDF files in `A4` and `letter` format for home printing.\n",
     "- `Output/DriveThruCards/<set name>.<language>/`: `zip` and `7z` archives of 300 dpi PNG images to be printed on DriveThruCards.com.\n",
-    "- `Output/MakePlayingCards/<set name>.<language>/`: `zip` and `7z` archives of 800 dpi PNG images to be printed on MakePlayingCards.com."
+    "- `Output/MakePlayingCards/<set name>.<language>/`: `zip` and `7z` archives of 800 dpi PNG images to be printed on MakePlayingCards.com.\n",
+    "\n",
+    "Additionally, if you specified `octgn_destination_path`, all OCTGN outputs are packed into a destination archive."
    ]
   }
  ],
