Copy OCTGN outputs to external folder

--- a/setGenerator.ipynb
+++ b/setGenerator.ipynb
@@ -55,8 +55,7 @@
     "\n",
     "    lotr.create_project()\n",
     "else:\n",
-    "    logging.info('No changes since the last run, skipping creating the'\n",
-    "                 ' project')\n",
+    "    logging.info('No changes since the last run, skipping')\n",
     "\n",
     "logging.info('Done (%ss)', round(time.time() - timestamp, 3))"
    ]
