--- a/setGenerator.ipynb
+++ b/setGenerator.ipynb
@@ -39,6 +39,7 @@
     "    if 'octgn' in conf['outputs']:\n",
     "        lotr.generate_octgn_xml(conf, set_id, set_name, set_row)\n",
     "\n",
+    "    lotr.copy_custom_images(conf, set_id, set_name)\n",
     "    for lang in conf['languages']:\n",
     "        lotr.generate_xml(conf, set_id, set_name, set_row, lang)\n",
     "        lotr.update_xml(conf, set_id, set_name, lang)\n",
