1. Fix recent Excel error; 2. Run get_sets after download_sheet; 3. Update readme.

--- a/setGenerator.ipynb
+++ b/setGenerator.ipynb
@@ -19,8 +19,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "conf = lotr.read_conf()\n",
-    "sets = lotr.get_sets(conf)"
+    "conf = lotr.read_conf()"
    ]
   },
   {
@@ -32,6 +31,7 @@
     "timestamp = time.time()\n",
     "lotr.clear_project_folders()\n",
     "lotr.download_sheet(conf)\n",
+    "sets = lotr.get_sets(conf)\n",
     "\n",
     "changes = False\n",
     "for set_data in sets:\n",
