1. Make DB outputs transparent PNG files with rounded corners; 2. Make OCTGN outputs PNG files

--- a/setGenerator.ipynb
+++ b/setGenerator.ipynb
@@ -88,12 +88,13 @@
     "                         ' skipping', set_name, lang)\n",
     "            continue\n",
     "\n",
-    "        if 'db_octgn' in conf['outputs']:\n",
-    "            lotr.generate_jpg300_nobleed(set_id, set_name, lang, skip_ids)\n",
-    "            if 'db' in conf['outputs']:\n",
-    "                lotr.generate_db(set_id, set_name, lang)\n",
-    "            if 'octgn' in conf['outputs']:\n",
-    "                lotr.generate_octgn(set_id, set_name, lang)\n",
+    "        if 'db' in conf['outputs']:\n",
+    "            lotr.generate_png300_db(conf, set_id, set_name, lang, skip_ids)\n",
+    "            lotr.generate_db(set_id, set_name, lang)\n",
+    "\n",
+    "        if 'octgn' in conf['outputs']:\n",
+    "            lotr.generate_png300_octgn(set_id, set_name, lang, skip_ids)\n",
+    "            lotr.generate_octgn(set_id, set_name, lang)\n",
     "\n",
     "        if 'pdf' in conf['outputs']:\n",
     "            lotr.generate_png300_pdf(conf, set_id, set_name, lang, skip_ids)\n",
@@ -116,10 +117,10 @@
    "source": [
     "Now there should be the following outputs:\n",
     "\n",
-    "- `Output/OCTGN/<set name>/`: `<octgn id>/set.xml` and `<set name>.<language>.o8c` image packs for OCTGN (300 dpi JPG).\n",
-    "- `Output/DB/<set name>.<language>/`: 300 dpi JPG images for general purposes.\n",
+    "- `Output/OCTGN/<set name>/`: `<octgn id>/set.xml` and `<set name>.<language>.o8c` image packs for OCTGN (300 dpi PNG).\n",
+    "- `Output/DB/<set name>.<language>/`: 300 dpi PNG images for general purposes.\n",
     "- `Output/PDF/<set name>.<language>/`: PDF files in `A4` and `letter` format for home printing.\n",
-    "- `Output/DriveThruCards/<set name>.<language>/`: `zip` and `7z` archives of 300 dpi PNG images to be printed on DriveThruCards.com.\n",
+    "- `Output/DriveThruCards/<set name>.<language>/`: `zip` and `7z` archives of 300 dpi JPG images to be printed on DriveThruCards.com.\n",
     "- `Output/MakePlayingCards/<set name>.<language>/`: `zip` and `7z` archives of 800 dpi PNG images to be printed on MakePlayingCards.com.\n",
     "\n",
     "Additionally, if you specified `octgn_destination_path`, OCTGN outputs will be copied there."
