--- a/setGenerator.ipynb
+++ b/setGenerator.ipynb
@@ -88,6 +88,9 @@
     "                         ' skipping', set_name, lang)\n",
     "            continue\n",
     "\n",
+    "        if conf['nobleed']:\n",
+    "            lotr.generate_png300_nobleed(conf, set_id, set_name, lang, skip_ids)\n",
+    "\n",
     "        if 'db' in conf['outputs']:\n",
     "            lotr.generate_png300_db(conf, set_id, set_name, lang, skip_ids)\n",
     "            lotr.generate_db(set_id, set_name, lang)\n",
