--- a/setGenerator.ipynb
+++ b/setGenerator.ipynb
@@ -51,7 +51,7 @@
     "        lotr.copy_xml(set_id, set_name, lang)\n",
     "\n",
     "if changes:\n",
-    "    if 'octgn' in conf['outputs'] and conf['octgn_destination_path']:\n",
+    "    if conf['octgn_destination_path'] and 'octgn' in conf['outputs']:\n",
     "        lotr.copy_octgn_outputs(conf)\n",
     "\n",
     "    lotr.create_project()\n",
