Remove support for xlsm spreadsheet

--- a/setGenerator.ipynb
+++ b/setGenerator.ipynb
@@ -37,7 +37,7 @@
     "for set_data in sets:\n",
     "    set_id, set_name, set_row = set_data\n",
     "    if 'octgn' in conf['outputs']:\n",
-    "        lotr.generate_octgn_xml(conf, set_id, set_name, set_row)\n",
+    "        lotr.generate_octgn_xml(set_id, set_name, set_row)\n",
     "\n",
     "    lotr.copy_custom_images(conf, set_id, set_name)\n",
     "    for lang in conf['languages']:\n",
