Configure A4 and Letter PDF separately

--- a/setGenerator.ipynb
+++ b/setGenerator.ipynb
@@ -101,7 +101,7 @@
     "\n",
     "        if 'pdf' in conf['outputs']:\n",
     "            lotr.generate_png300_pdf(conf, set_id, set_name, lang, skip_ids)\n",
-    "            lotr.generate_pdf(set_id, set_name, lang)\n",
+    "            lotr.generate_pdf(conf, set_id, set_name, lang)\n",
     "\n",
     "        if 'makeplayingcards' in conf['outputs']:\n",
     "            lotr.generate_png800_bleedmpc(conf, set_id, set_name, lang, skip_ids)\n",
