Add possibility to generate different outputs for different languages

--- a/setGenerator.ipynb
+++ b/setGenerator.ipynb
@@ -36,7 +36,7 @@
     "changes = False\n",
     "for set_data in sets:\n",
     "    set_id, set_name, set_row = set_data\n",
-    "    if 'octgn' in conf['outputs']:\n",
+    "    if conf['octgn']:\n",
     "        lotr.generate_octgn_xml(set_id, set_name, set_row)\n",
     "\n",
     "    lotr.copy_custom_images(conf, set_id, set_name)\n",
@@ -51,7 +51,7 @@
     "        lotr.copy_xml(set_id, set_name, lang)\n",
     "\n",
     "if changes:\n",
-    "    if conf['octgn_destination_path'] and 'octgn' in conf['outputs']:\n",
+    "    if conf['octgn'] and conf['octgn_destination_path']:\n",
     "        lotr.copy_octgn_outputs(conf)\n",
     "\n",
     "    lotr.create_project()\n",
@@ -88,26 +88,26 @@
     "                         ' skipping', set_name, lang)\n",
     "            continue\n",
     "\n",
-    "        if conf['nobleed']:\n",
+    "        if conf['nobleed'][lang]:\n",
     "            lotr.generate_png300_nobleed(conf, set_id, set_name, lang, skip_ids)\n",
     "\n",
-    "        if 'db' in conf['outputs']:\n",
+    "        if 'db' in conf['outputs'][lang]:\n",
     "            lotr.generate_png300_db(conf, set_id, set_name, lang, skip_ids)\n",
     "            lotr.generate_db(set_id, set_name, lang)\n",
     "\n",
-    "        if 'octgn' in conf['outputs']:\n",
+    "        if 'octgn' in conf['outputs'][lang]:\n",
     "            lotr.generate_png300_octgn(set_id, set_name, lang, skip_ids)\n",
     "            lotr.generate_octgn(set_id, set_name, lang)\n",
     "\n",
-    "        if 'pdf' in conf['outputs']:\n",
+    "        if 'pdf' in conf['outputs'][lang]:\n",
     "            lotr.generate_png300_pdf(conf, set_id, set_name, lang, skip_ids)\n",
     "            lotr.generate_pdf(conf, set_id, set_name, lang)\n",
     "\n",
-    "        if 'makeplayingcards' in conf['outputs']:\n",
+    "        if 'makeplayingcards' in conf['outputs'][lang]:\n",
     "            lotr.generate_png800_bleedmpc(conf, set_id, set_name, lang, skip_ids)\n",
     "            lotr.generate_mpc(conf, set_id, set_name, lang)\n",
     "\n",
-    "        if 'drivethrucards' in conf['outputs']:\n",
+    "        if 'drivethrucards' in conf['outputs'][lang]:\n",
     "            lotr.generate_jpg300_bleeddtc(conf, set_id, set_name, lang, skip_ids)\n",
     "            lotr.generate_dtc(conf, set_id, set_name, lang)\n",
     "\n",
