Implement a sanity check

--- a/setGenerator.ipynb
+++ b/setGenerator.ipynb
@@ -31,6 +31,7 @@
     "timestamp = time.time()\n",
     "lotr.reset_project_folders(conf)\n",
     "lotr.download_sheet(conf)\n",
+    "lotr.sanity_check()\n",
     "sets = lotr.get_sets(conf)\n",
     "\n",
     "changes = False\n",
