Get rid of hardcoded columns in Python

--- a/setGenerator.ipynb
+++ b/setGenerator.ipynb
@@ -31,6 +31,7 @@
     "timestamp = time.time()\n",
     "lotr.reset_project_folders(conf)\n",
     "lotr.download_sheet(conf)\n",
+    "lotr.get_columns()\n",
     "lotr.sanity_check()\n",
     "sets = lotr.get_sets(conf)\n",
     "\n",
@@ -121,13 +122,14 @@
    "source": [
     "Now there should be the following outputs:\n",
     "\n",
-    "- `Output/OCTGN/<set name>/`: `<octgn id>/set.xml` and `<set name>.<language>.o8c` image packs for OCTGN (300 dpi PNG).\n",
+    "- `Output/OCTGN/<set name>/<octgn id>/set.xml`.\n",
+    "- `Output/OCTGN/<set name>/<set name>.<language>.o8c`: image packs for OCTGN (300 dpi PNG).\n",
     "- `Output/DB/<set name>.<language>/`: 300 dpi PNG images for general purposes.\n",
     "- `Output/PDF/<set name>.<language>/`: PDF files in `A4` and `letter` format for home printing.\n",
     "- `Output/DriveThruCards/<set name>.<language>/`: `zip` and `7z` archives of 300 dpi JPG images to be printed on DriveThruCards.com.\n",
     "- `Output/MakePlayingCards/<set name>.<language>/`: `zip` and `7z` archives of 800 dpi PNG images to be printed on MakePlayingCards.com.\n",
     "\n",
-    "Additionally, if you specified `octgn_destination_path`, OCTGN outputs will be copied there."
+    "Additionally, if you specified `octgn_destination_path`, OCTGN's `set.xml` files will be copied there."
    ]
   }
  ],
