--- a/setGenerator.ipynb
+++ b/setGenerator.ipynb
@@ -122,14 +122,16 @@
    "source": [
     "Now there should be the following outputs:\n",
     "\n",
+    "- `Output/DB/<set name>.<language>/`: 300 dpi PNG images for general purposes.\n",
+    "- `Output/DriveThruCards/<set name>.<language>/`: `zip` and `7z` archives of 300 dpi JPG images to be printed on DriveThruCards.com.\n",
+    "- `Output/HallOfBeorn/<set name>.json`.\n",
+    "- `Output/MakePlayingCards/<set name>.<language>/`: `zip` and `7z` archives of 800 dpi PNG images to be printed on MakePlayingCards.com.\n",
     "- `Output/OCTGN/<set name>/<octgn id>/set.xml`.\n",
     "- `Output/OCTGN/<set name>/<set name>.<language>.o8c`: image packs for OCTGN (300 dpi PNG).\n",
-    "- `Output/DB/<set name>.<language>/`: 300 dpi PNG images for general purposes.\n",
     "- `Output/PDF/<set name>.<language>/`: PDF files in `A4` and `letter` format for home printing.\n",
-    "- `Output/DriveThruCards/<set name>.<language>/`: `zip` and `7z` archives of 300 dpi JPG images to be printed on DriveThruCards.com.\n",
-    "- `Output/MakePlayingCards/<set name>.<language>/`: `zip` and `7z` archives of 800 dpi PNG images to be printed on MakePlayingCards.com.\n",
+    "- `Output/RingsDB/<set name>.csv`.\n",
     "\n",
-    "Additionally, if you specified `octgn_destination_path`, OCTGN's `set.xml` files will be copied there."
+    "Additionally, if you specified `octgn_destination_path`, `set.xml` files for OCTGN will be copied there."
    ]
   }
  ],
