Use additional configuration options

--- a/setGenerator.ipynb
+++ b/setGenerator.ipynb
@@ -38,8 +38,14 @@
     "changes = False\n",
     "for set_data in sets:\n",
     "    set_id, set_name, set_row = set_data\n",
-    "    if conf['octgn']:\n",
-    "        lotr.generate_octgn_xml(set_id, set_name, set_row)\n",
+    "    if conf['octgn_set_xml']:\n",
+    "        lotr.generate_octgn_set_xml(set_id, set_name, set_row)\n",
+    "\n",
+    "    if conf['ringsdb_csv']:\n",
+    "        lotr.generate_ringsdb_csv(set_id, set_name, set_row)\n",
+    "\n",
+    "    if conf['hallofbeorn_json']:\n",
+    "        lotr.generate_hallofbeorn_json(set_id, set_name, set_row)\n",
     "\n",
     "    lotr.copy_custom_images(conf, set_id, set_name)\n",
     "    for lang in conf['languages']:\n",
@@ -53,7 +59,7 @@
     "        lotr.copy_xml(set_id, set_name, lang)\n",
     "\n",
     "if changes:\n",
-    "    if conf['octgn'] and conf['octgn_destination_path']:\n",
+    "    if conf['octgn_set_xml'] and conf['octgn_destination_path']:\n",
     "        lotr.copy_octgn_outputs(conf)\n",
     "\n",
     "    lotr.create_project()\n",
