Add TIFF support for DriveThruCards

--- a/setGenerator.ipynb
+++ b/setGenerator.ipynb
@@ -116,7 +116,7 @@
     "            lotr.generate_mpc(conf, set_id, set_name, lang)\n",
     "\n",
     "        if 'drivethrucards' in conf['outputs'][lang]:\n",
-    "            lotr.generate_jpg300_bleeddtc(conf, set_id, set_name, lang, skip_ids)\n",
+    "            lotr.generate_300_bleeddtc(conf, set_id, set_name, lang, skip_ids)\n",
     "            lotr.generate_dtc(conf, set_id, set_name, lang)\n",
     "\n",
     "logging.info('Done (%ss)', round(time.time() - timestamp, 3))"
