1. Verify imagemagick results; 2. Some refactoring

--- a/setGenerator.ipynb
+++ b/setGenerator.ipynb
@@ -31,7 +31,7 @@
     "timestamp = time.time()\n",
     "lotr.reset_project_folders(conf)\n",
     "lotr.download_sheet(conf)\n",
-    "lotr.get_columns()\n",
+    "lotr.extract_data()\n",
     "lotr.sanity_check()\n",
     "sets = lotr.get_sets(conf)\n",
     "\n",
@@ -42,10 +42,10 @@
     "        lotr.generate_octgn_set_xml(set_id, set_name, set_row)\n",
     "\n",
     "    if conf['ringsdb_csv']:\n",
-    "        lotr.generate_ringsdb_csv(set_id, set_name, set_row)\n",
+    "        lotr.generate_ringsdb_csv(set_id, set_name)\n",
     "\n",
     "    if conf['hallofbeorn_json']:\n",
-    "        lotr.generate_hallofbeorn_json(set_id, set_name, set_row)\n",
+    "        lotr.generate_hallofbeorn_json(set_id, set_name)\n",
     "\n",
     "    lotr.copy_custom_images(conf, set_id, set_name)\n",
     "    for lang in conf['languages']:\n",
