Generate RingsDB outputs

--- a/setGenerator.ipynb
+++ b/setGenerator.ipynb
@@ -37,7 +37,10 @@
     "\n",
     "changes = False\n",
     "for set_data in sets:\n",
-    "    set_id, set_name, set_row = set_data\n",
+    "    set_id = set_data[lotr.SET_ID]\n",
+    "    set_name = set_data[lotr.SET_NAME]\n",
+    "    set_row = set_data[lotr.SET_ROW]\n",
+    "\n",
     "    if conf['octgn_set_xml']:\n",
     "        lotr.generate_octgn_set_xml(set_id, set_name, set_row)\n",
     "\n",
